fix tooltip going out of screen when looking at opponent's hand

--- a/app/scripts/src/less/ui/replay/hand.less
+++ b/app/scripts/src/less/ui/replay/hand.less
@@ -3,7 +3,7 @@
 	position: absolute;
 	width: 100%;
 	height: 143px;
-	top: -80px;
+	top: -40px;
 
 	.game-card {
 		display: inline-block;
