--- a/app/scripts/src/less/ui/replay/mulligan.less
+++ b/app/scripts/src/less/ui/replay/mulligan.less
@@ -1,6 +1,6 @@
 .mulligan {
 	text-align: center;
-	top: 50%;
+	top: 55%;
 	transform: translateY(-50%);
 	position: absolute;
 	width: 100%;
