--- a/app/scripts/src/less/ui/replay/tooltip.less
+++ b/app/scripts/src/less/ui/replay/tooltip.less
@@ -3,6 +3,7 @@
 	padding: 0;
 	opacity: 1;
 	margin-left: -40px;
+	z-index: 10000;
 }
 
 .card-tooltip:after {
